# cash_overflow

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_examples.sh  conanfile.py
.github/workflows/: build_cmake.yml  clang-format.yml
ci/clang-formater/: Dockerfile  action.yml  entrypoint.sh
cmake/: Conan.cmake
db/: users.db
docs/: 01_build_table_from_json.md
src/: CMakeLists.txt  main.cpp
src/imgui/: CMakeLists.txt  FileHandler.hpp  account.hpp  app.hpp  category.hpp  colors.h  colors.hpp  csvparser.hpp  currency.hpp  custom_exception.h  date.hpp  db.hpp  error.hpp  fileHandler.hpp  imgui.ini  imgui_raii_wrapper.h  logger.hpp  main.cpp  money.cpp  money.hpp  queryBuilder.hpp  raii_imgui.hpp  tableBuilder.hpp  test.cpp  text.hpp  user.cpp  user.hpp  users.db  util.h  util.hpp
src/imgui/imguiWrapper/: color.hpp  colorOptions.hpp  colors.hpp  dropDown.hpp  mainMenuBar.hpp  menu.hpp  tabBar.hpp  tabItem.hpp  tableBuilder.hpp  text.hpp  window.hpp
src/qt/: AccountsTab.cpp  AccountsTab.hpp  CMakeLists.txt  TabDialog.cpp  TabDialog.hpp  qtMain.cpp
src/qt/voodoo-UI/: main.cpp  voodo.ui  voodoUI.h
test/: CMakeLists.txt  categoryTests.cpp  category_tests.cpp  dateTests.cpp  date_tests.cpp  error_tests.cpp  fileHandlerTests.cpp  insert_query_tests.cpp  loggerTests.cpp  mapTests.cpp  map_tests.cpp  moneyTests.cpp  parser_tests.cpp  tableBuilderTests.cpp  table_builder_tests.cpp
test/resources/: example_file.txt
